feat: add portfolio

--- a/index.html
+++ b/index.html
@@ -5,30 +5,135 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./src/css/main.css">
+  <link rel="shortcut icon" href="./src/img/briefcase.png" type="image/x-icon">
   <title>Portfolio</title>
 </head>
 <body>
   <div class="wrap">
     <header>
-      <h1>PORTFOLIO</h1>
+      <h1>Aleksandr Yovzhenko</h1>
+      <img class="photo" src="./src/img/Photo_CV.jpg" alt="Photo">
+      <p class="about">
+        I am a beginner backend developer.
+        In programming, I like many ways to solve a problem and find the best one.
+        I have a solid knowledge of JavaScript, TypeScript, NodeJS, HTML, CSS.
+        I am ready to solve the tasks set for the company, work in a team and find the
+        best solution together.
+        I continue to study and develop in order to achieve high results in
+        programming.
+      </p>
     </header>
 
     <main>
-      <div class="task-box">Same text</div>
-      <div class="task-box">Same text</div>
-      <div class="task-box">Same text</div>
-      <div class="task-box">Same text</div>
-      <div class="task-box">Same text</div>
+      <div class="education">
+        <h2>Education</h2>
+        <div class="description-education">
+          <div class="description-education-frontend">
+            <h3>EPAM UpSkill Lab - Front End</h3>
+            <img src="./src/img/EPAM%20UpSkill%20Lab%20-%20Front%20End.jpg" alt="EPAM UpSkill Lab - Front End">
+          </div>
+          <div class="description-education-backend">
+            <h3>RS School - NodeJS</h3>
+            <img src="./src/img/RS%20School%20-%20NodeJS.jpg" alt="RS School - NodeJS">
+          </div>
+        </div>
+      </div>
+      <div class="projects">
+        <h2>Projects</h2>
+        <div class="task-box">
+          <div class="preview-task-box preview-task-box-one">
+            <h2>NodeJS Service</h2>
+            <div class="description-task-box description-task-box-visible">
+              <ul>
+                <li>Description: NodeJs server from Trello</li>
+                <li>Languages: TypeScript(NestJS, Fastify)</li>
+                <li>Database: PostgreSQL, TypeORM</li>
+                <li>Technologies: Docker, TypeORM, JWT, Bcrypt</li>
+                <li>Instruments: Visual Studio Code, NPM, Git, Postman</li>
+                <li>Position: NodeJS developer</li>
+                <li>Role: I completed the whole project from start to finish</li>
+              </ul>
+              <a href="https://github.com/GoldenManBel/nodejs2021Q4-service", target="_blank">GitHub: NodeJS Service</a>
+            </div>
+          </div>
+        </div>
+        <div class="task-box">
+          <div class="preview-task-box preview-task-box-two">
+            <h2>Chat on Socket</h2>
+            <div class="description-task-box description-task-box-visible">
+              <ul>
+                <li>Description: Chat on socket</li>
+                <li>Languages: JavaScript(jQuery), NodeJS(Express, Socket.io)</li>
+                <li>Technologies: HTML, CSS</li>
+                <li>Instruments: Visual Studio Code, Chrome tools, Git</li>
+                <li>Position: Full Stack developer</li>
+                <li>Role: I completed the whole project from start to finish</li>
+              </ul>
+              <a href="https://github.com/GoldenManBel/rsschool-cv/tree/chat-on-socket", target="_blank">GitHub: Chat on Socket</a>
+            </div>
+          </div>
+        </div>
+        <div class="task-box">
+          <div class="preview-task-box preview-task-box-three">
+            <h2>Weather Website</h2>
+            <div class="description-task-box description-task-box-visible">
+              <ul>
+                <li>Description: Web application with the weather forecast</li>
+                <li>Languages: JavaScript</li>
+                <li>Technologies: HTML, CSS, Sass</li>
+                <li>Instruments: Visual Studio Code, Chrome tools, Git, WebPack, ESLint</li>
+                <li>Position: FrontEnd developer</li>
+                <li>Role: I completed the whole project from start to finish</li>
+              </ul>
+              <a href="https://github.com/GoldenManBel/rsschool-cv/tree/fancy-weather", target="_blank">GitHub: Weather Website</a>
+            </div>
+          </div>
+        </div>
+        <div class="task-box">
+          <div class="preview-task-box preview-task-box-four">
+            <h2>Raindrops Game</h2>
+            <div class="description-task-box description-task-box-visible">
+              <ul>
+                <li>Description: A game for developing math and counting skills</li>
+                <li>Languages: JavaScript</li>
+                <li>Technologies: HTML, CSS</li>
+                <li>Instruments: Visual Studio Code, Chrome tools, Git</li>
+                <li>Position: FrontEnd developer</li>
+                <li>Role: I completed the whole project from start to finish</li>
+              </ul>
+              <a href="https://github.com/GoldenManBel/rsschool-cv/tree/raindrops", target="_blank">GitHub: Raindrops Game</a>
+            </div>
+          </div>
+        </div>
+        <div class="task-box">
+          <div class="preview-task-box preview-task-box-five">
+            <h2>Flex Panel Gallery</h2>
+            <div class="description-task-box description-task-box-visible">
+              <ul>
+                <li>Description: Gallery of flexible panels</li>
+                <li>Languages: JavaScript</li>
+                <li>Technologies: HTML, CSS, Flex</li>
+                <li>Instruments: Visual Studio Code, Chrome tools, Git</li>
+                <li>Position: FrontEnd developer</li>
+                <li>Role: I completed the whole project from start to finish</li>
+              </ul>
+              <a href="https://github.com/GoldenManBel/rsschool-cv/tree/flex-panel-gallery", target="_blank">GitHub: Flex Panel Gallery</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <footer>
       <div class="footer-list">
         <ul class="list">
-          <li class="item-list"><a class="link-list" href="http://google.com">Email</a></li>
-          <li class="item-list"><a class="link-list">Telegram</a></li>
-          <li class="item-list"><a class="link-list">LinkedId</a></li>
-          <li class="item-list"><a class="link-list">Phone</a></li>
-          <li class="item-list"><a class="link-list">Skype</a></li>
+          <li class="item-list"><a class="link-list" href="https://github.com/GoldenManBel" target="_blank"><img src="./src/img/icons/icons8-github-64.png"></a></li>
+          <li class="item-list"><a class="link-list" href="mailto:alexander.yovzhenko@gmail.com"><img src="./src/img/icons/icons8-email-64.png"></a></li>
+          <li class="item-list"><a class="link-list" href="https://www.linkedin.com/in/alexander-yovzhenko-945014192/" target="_blank"><img src="./src/img/icons/icons8-линкедин-64.png"></a></li>
+          <li class="item-list"><a class="link-list" href="https://telegram.me/GoldenManBel" target="_blank"><img src="./src/img/icons/icons8-телеграмма-app-64.png"></a></li>
+          <li class="item-list"><a class="link-list" href="https://wa.me/375333022209" target="_blank"><img src="./src/img/icons/icons8-whatsapp-64.png"></a></li>
+          <li class="item-list"><a class="link-list" href="tel: +375259336486" target="_blank"><img src="./src/img/icons/icons8-phone-64.png"></a></li>
+          <li class="item-list"><a class="link-list" href="https://github.com/GoldenManBel/Portfolio/tree/master/src/cv/NodeJS_Александр_Ёвженко_CV.pdf" download><img src="./src/img/icons/icons8-открыть-резюме-96.png"></a></li>
         </ul>
       </div>
     </footer>
