refactor: update paths

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                 <li>Role: I completed the whole project from start to finish</li>
               </ul>
               <a href="https://github.com/GoldenManBel/rsschool-cv/tree/raindrops", target="_blank">GitHub: Raindrops Game</a>
+              <a href="https://goldenmanbel.github.io/rsschool-cv/", target="_blank">GitHub: Raindrops Game</a>
             </div>
           </div>
         </div>
