refactor: update paths

--- a/index.html
+++ b/index.html
@@ -119,7 +119,9 @@
                 <li>Position: FrontEnd developer</li>
                 <li>Role: I completed the whole project from start to finish</li>
               </ul>
-              <a href="https://github.com/GoldenManBel/rsschool-cv/tree/flex-panel-gallery", target="_blank">GitHub: Flex Panel Gallery</a>
+              <a href="https://github.com/GoldenManBel/Flex-panel-gallery", target="_blank">GitHub: Flex Panel Gallery</a>
+              <br/>
+              <a href="https://goldenmanbel.github.io/Flex-panel-gallery/", target="_blank">Flex Panel Gallery</a>
             </div>
           </div>
         </div>
