refactor: update paths

--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
                 <li>Position: FrontEnd developer</li>
                 <li>Role: I completed the whole project from start to finish</li>
               </ul>
-              <a href="https://github.com/GoldenManBel/rsschool-cv/tree/fancy-weather", target="_blank">GitHub: Weather Website</a>
+              <a href="https://github.com/GoldenManBel/Fancy-weather", target="_blank">GitHub: Weather Website</a>
+              <br/>
+              <a href="https://goldenmanbel.github.io/Fancy-weather/", target="_blank">Weather Website</a>
             </div>
           </div>
         </div>
