refactor: update paths

--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
                 <li>Position: Full Stack developer</li>
                 <li>Role: I completed the whole project from start to finish</li>
               </ul>
-              <a href="https://github.com/GoldenManBel/rsschool-cv/tree/chat-on-socket", target="_blank">GitHub: Chat on Socket</a>
+              <a href="https://github.com/GoldenManBel/Chat-on-socket", target="_blank">GitHub: Chat on Socket</a>
+              <br/>
+              <a href="https://chat---socket.herokuapp.com/", target="_blank">Chat on Socket</a>
             </div>
           </div>
         </div>
