refactor: update paths

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               </ul>
               <a href="https://github.com/GoldenManBel/Chat-on-socket", target="_blank">GitHub: Chat on Socket</a>
               <br/>
-              <a href="https://chat---socket.herokuapp.com/", target="_blank">Chat on Socket</a>
+              <a href="http://chat---socket.herokuapp.com/", target="_blank">Chat on Socket</a>
             </div>
           </div>
         </div>
