feat: add scroll animation

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
   <div class="wrap">
     <header>
-      <h1>Aleksandr Yovzhenko</h1>
-      <img class="photo" src="./src/img/Photo_CV.jpg" alt="Photo">
+      <h1 class="title-one _anim-items _anim-no-hide">Aleksandr Yovzhenko</h1>
+      <img class="photo _anim-items _anim-no-hide" src="./src/img/Photo_CV.jpg" alt="Photo">
       <p class="about">
         I am a beginner backend developer.
         In programming, I like many ways to solve a problem and find the best one.
@@ -26,21 +26,21 @@
 
     <main>
       <div class="education">
-        <h2>Education</h2>
+        <h2 class=" _anim-items _anim-no-hide">Education</h2>
         <div class="description-education">
-          <div class="description-education-frontend">
+          <div class="description-education-frontend _anim-items _anim-no-hide">
             <h3>EPAM UpSkill Lab - Front End</h3>
             <img src="./src/img/EPAM%20UpSkill%20Lab%20-%20Front%20End.jpg" alt="EPAM UpSkill Lab - Front End">
           </div>
-          <div class="description-education-backend">
+          <div class="description-education-backend _anim-items _anim-no-hide">
             <h3>RS School - NodeJS</h3>
             <img src="./src/img/RS%20School%20-%20NodeJS.jpg" alt="RS School - NodeJS">
           </div>
         </div>
       </div>
       <div class="projects">
-        <h2>Projects</h2>
-        <div class="task-box">
+        <h2 class=" _anim-items _anim-no-hide">Projects</h2>
+        <div class="task-box _anim-items _anim-no-hide">
           <div class="preview-task-box preview-task-box-one">
             <h2>NodeJS Service</h2>
             <div class="description-task-box description-task-box-visible">
@@ -57,7 +57,7 @@
             </div>
           </div>
         </div>
-        <div class="task-box">
+        <div class="task-box _anim-items _anim-no-hide">
           <div class="preview-task-box preview-task-box-two">
             <h2>Chat on Socket</h2>
             <div class="description-task-box description-task-box-visible">
@@ -75,7 +75,7 @@
             </div>
           </div>
         </div>
-        <div class="task-box">
+        <div class="task-box _anim-items _anim-no-hide">
           <div class="preview-task-box preview-task-box-three">
             <h2>Weather Website</h2>
             <div class="description-task-box description-task-box-visible">
@@ -93,7 +93,7 @@
             </div>
           </div>
         </div>
-        <div class="task-box">
+        <div class="task-box _anim-items _anim-no-hide">
           <div class="preview-task-box preview-task-box-four">
             <h2>Raindrops Game</h2>
             <div class="description-task-box description-task-box-visible">
@@ -111,7 +111,7 @@
             </div>
           </div>
         </div>
-        <div class="task-box">
+        <div class="task-box _anim-items _anim-no-hide">
           <div class="preview-task-box preview-task-box-five">
             <h2>Flex Panel Gallery</h2>
             <div class="description-task-box description-task-box-visible">
@@ -134,7 +134,7 @@
 
     <footer>
       <div class="footer-list">
-        <ul class="list">
+        <ul class="list _anim-items _anim-no-hide">
           <li class="item-list"><a class="link-list" href="https://github.com/GoldenManBel" target="_blank"><img src="./src/img/icons/icons8-github-64.png"></a></li>
           <li class="item-list"><a class="link-list" href="mailto:alexander.yovzhenko@gmail.com"><img src="./src/img/icons/icons8-email-64.png"></a></li>
           <li class="item-list"><a class="link-list" href="https://www.linkedin.com/in/alexander-yovzhenko-945014192/" target="_blank"><img src="./src/img/icons/icons8-линкедин-64.png"></a></li>
