refactor: refactor CV

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           <li class="item-list"><a class="link-list" href="https://telegram.me/GoldenManBel" target="_blank"><img src="./src/img/icons/icons8-телеграмма-app-64.png"></a></li>
           <li class="item-list"><a class="link-list" href="https://wa.me/375333022209" target="_blank"><img src="./src/img/icons/icons8-whatsapp-64.png"></a></li>
           <li class="item-list"><a class="link-list" href="tel: +375259336486" target="_blank"><img src="./src/img/icons/icons8-phone-64.png"></a></li>
-          <li class="item-list"><a class="link-list" href="https://github.com/GoldenManBel/Portfolio/tree/master/src/cv/NodeJS_Александр_Ёвженко_CV.pdf" download><img src="./src/img/icons/icons8-открыть-резюме-96.png"></a></li>
+          <li class="item-list"><a class="link-list" href="https://github.com/GoldenManBel/Portfolio/tree/master/src/cv/NodeJS_Aleksandr_Yovzhenko_CV.pdf" download><img src="./src/img/icons/icons8-открыть-резюме-96.png"></a></li>
         </ul>
       </div>
     </footer>
