feat: add new cv

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 <body>
   <div class="wrap">
     <header>
-      <h1 class="title-one _anim-items _anim-no-hide">Aleksandr Yovzhenko</h1>
+      <h1 class="title-one _anim-items _anim-no-hide">Alexander Yovzhenko</h1>
       <img class="photo _anim-items _anim-no-hide" src="./src/img/Photo_CV.jpg" alt="Photo">
       <p class="about">
-        I am a beginner backend developer.
-        In programming, I like many ways to solve a problem and find the best one.
-        I have a solid knowledge of JavaScript, TypeScript, NodeJS, HTML, CSS.
-        I am ready to solve the tasks set for the company, work in a team and find the
+        Hey! I am a web developer.
+        I have good knowledge of JavaScript, TypeScript, NodeJS, React, HTML, CSS.
+        In programming, I like many ways to solve a problem and find the best solution.
+        Ready to solve the tasks assigned to the company, work in a team and find the
         best solution together.
-        I continue to study and develop in order to achieve high results in
-        programming.
+        I continue to learn and develop in order to achieve high results in programming.
+        I will be glad to join your team
       </p>
     </header>
 
@@ -141,7 +141,7 @@
           <li class="item-list"><a class="link-list" href="https://telegram.me/GoldenManBel" target="_blank"><img src="./src/img/icons/icons8-телеграмма-app-64.png"></a></li>
           <li class="item-list"><a class="link-list" href="https://wa.me/375333022209" target="_blank"><img src="./src/img/icons/icons8-whatsapp-64.png"></a></li>
           <li class="item-list"><a class="link-list" href="tel: +375259336486" target="_blank"><img src="./src/img/icons/icons8-phone-64.png"></a></li>
-          <li class="item-list"><a class="link-list" href="https://github.com/GoldenManBel/Portfolio/tree/master/src/cv/Junior_NodeJS_Aleksandr_Yovzhenko_CV.pdf" download><img src="./src/img/icons/icons8-открыть-резюме-96.png"></a></li>
+          <li class="item-list"><a class="link-list" href="https://github.com/GoldenManBel/Portfolio/tree/master/src/cv/Web_Developer_Alexander_Yovzhenko_CV.pdf" download><img src="./src/img/icons/icons8-открыть-резюме-96.png"></a></li>
         </ul>
       </div>
     </footer>
